changed method to java 8